--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,8 @@
 		<header class="major">
 			<h1>{{ page.title }}</h1>
 		</header>
+		{% if page.author %}<br/><p>by {{ page.author }} &lt;{{ site.writers[page.author] }}&gt;</p>{% endif %}
+
 		<p>{{ content }}</p>
 	</div>
 </section>
