--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,7 +41,7 @@
                 </header>
                 <p>{{ content }}</p>
                 <ul class="actions">
-                    <li><a href="about.html" class="button next">About us</a></li>
+                    <li><a href="/about/" class="button next">About us</a></li>
                 </ul>
             </div>
         </section>
