--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,9 +20,15 @@
 <section id="one">
 	<div class="inner">
 		<header class="major">
-			<h1>{{ page.title }}</h1>
+			<h1>{{ page.title }}
+				{% for tag in page.tags %}
+					<a class="tag" href="/blog/tags/#{{ tag | slugify }}">{{ tag }}</a>
+				{% endfor %}
+				</h1>
 		</header>
-		{% if page.author %}<br/><p>by {{ page.author }} &lt;{{ site.writers[page.author] }}&gt;</p>{% endif %}
+
+		{% if page.author %}<p>by {{ page.author }} &lt;{{ site.writers[page.author] }}&gt;</p>{% endif %}
+		<br/>
 
 		<p>{{ content }}</p>
 	</div>
