--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -92,8 +92,8 @@
 			</ul>
 			<ul class="copyright">
 				<li>&copy; {{ site.title }} </li>
-				<li><a href="/about.html">About us</a></li>
-
+				<li><a href="/about/">About us</a></li>
+				<li><a href="/contact/">Contact us</a></li>
 			</ul>
 		</div>
 	</footer>
