--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,8 +18,10 @@
 	    	{% endif %}
 		{% endfor %}
 		{% for page in site.pages %}
+		    {% if page.menu  %}
 		    {% if page.layout != "home" %}
 		        <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+		    {% endif %}
 		    {% endif %}
 		{% endfor %}
 	</ul>
