--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,6 +21,8 @@
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
                 <ul class="actions">
+                    <li><a href="#menu" class="button next scrolly">Navigation</a></li>
+                    <li><a href="/about/" class="button next scrolly">About us</a></li>
                     <li><a href="#one" class="button next scrolly">Our articles</a></li>
                 </ul>
             </div>
@@ -36,12 +38,9 @@
         <!-- Two -->
         <section id="two">
             <div class="inner">
-                <header class="major">
-                    <h2>Read why we are here</h2>
-                </header>
                 <p>{{ content }}</p>
                 <ul class="actions">
-                    <li><a href="/about/" class="button next">About us</a></li>
+                    <li><a href="/blog/" class="button next">More articles</a></li>
                 </ul>
             </div>
         </section>
