--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,8 +27,7 @@
 				</h1>
 		</header>
 
-		{% if page.author %}<p>by {{ page.author }} &lt;{{ site.writers[page.author] }}&gt;</p>{% endif %}
-		<br/>
+		{% if page.author %}<p>by {{ page.author }} &lt;{{ site.writers[page.author] }}&gt;</p><br/>{% endif %}
 
 		<p>{{ content }}</p>
 	</div>
