--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,8 +3,10 @@
     position: relative;
     left: 2em;
 }
-
-li  {
+.noindent {
+    left: 0em;
+}
+li {
     position: relative;
     left: 2em;
 }
