--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,15 +13,17 @@
 <nav id="menu">
 	<ul class="links">
         {% for page in site.pages %}
-		    {% if page.layout == "home" %}
-		        <li><a href="{{ "" | absolute_url }}">{{ page.title }}</a></li>
-	    	{% endif %}
+		    {% if page.menu  %}
+				{% if page.layout == "home" %}
+					<li class="noindent"><a href="{{ "" | absolute_url }}">{{ page.title }}</a></li>
+				{% endif %}
+		    {% endif %}
 		{% endfor %}
 		{% for page in site.pages %}
 		    {% if page.menu  %}
-		    {% if page.layout != "home" %}
-		        <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
-		    {% endif %}
+				{% if page.layout != "home" %}
+					<li class="noindent"><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+				{% endif %}
 		    {% endif %}
 		{% endfor %}
 	</ul>
