--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,9 +21,9 @@
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
                 <ul class="actions">
-                    <li><a href="#menu" class="button next scrolly">Navigation</a></li>
                     <li><a href="/about/" class="button next scrolly">About us</a></li>
                     <li><a href="#one" class="button next scrolly">Our articles</a></li>
+                    <li><a href="/writing/" class="button next scrolly">submit an article</a></li>
                 </ul>
             </div>
         </div>
